# IDZ_python

./: .gitignore  README.md  pyproject.toml  security_utils.py  test_task_1_1.py  test_task_2_1.py  test_task_2_2.py  test_task_3_1.py  test_task_3_2.py  test_task_3_3.py
.github/workflows/: tests.yml
