[project]
name = "idz"
version = "0.1.0"
description = "Individual homework on testing and automation"
requires-python = ">=3.12"
dependencies = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
